--- a/configsync/core.entity_view_display.node.report.default.yml
+++ b/configsync/core.entity_view_display.node.report.default.yml
@@ -9,15 +9,18 @@ dependencies:
     - field.field.node.report.field_longitude
     - field.field.node.report.field_media_url
     - field.field.node.report.field_neighborhood
+    - field.field.node.report.field_requested_datetime
     - field.field.node.report.field_requested_timestamp
     - field.field.node.report.field_service_name
     - field.field.node.report.field_service_request_id
     - field.field.node.report.field_status
     - field.field.node.report.field_status_notes
+    - field.field.node.report.field_updated_datetime
     - field.field.node.report.field_updated_timestamp
     - field.field.node.report.field_zip_code
     - node.type.report
   module:
+    - datetime
     - options
     - user
 id: node.report.default
@@ -63,7 +66,7 @@ content:
     type: number_decimal
     region: content
   field_media_url:
-    weight: 13
+    weight: 15
     label: above
     settings:
       link_to_entity: false
@@ -71,15 +74,24 @@ content:
     type: string
     region: content
   field_neighborhood:
-    weight: 12
+    weight: 10
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_requested_datetime:
+    weight: 12
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
   field_requested_timestamp:
-    weight: 10
+    weight: 11
     label: above
     settings:
       date_format: medium
@@ -118,8 +130,17 @@ content:
     third_party_settings: {  }
     type: basic_string
     region: content
+  field_updated_datetime:
+    weight: 14
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
   field_updated_timestamp:
-    weight: 11
+    weight: 13
     label: above
     settings:
       date_format: medium
