--- a/configsync/node.type.page.yml
+++ b/configsync/node.type.page.yml
@@ -11,7 +11,7 @@ third_party_settings:
     parent: 'main:'
 name: Page
 type: page
-description: ''
+description: 'A basic page'
 help: ''
 new_revision: true
 preview_mode: 1
