--- a/configsync/views.view.reports_cards.yml
+++ b/configsync/views.view.reports_cards.yml
@@ -652,7 +652,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"card\" style=\"width: 18rem;\">\r\n  {{ field_media_url }}\r\n  <div class=\"card-body\">\r\n    <span class=\"badge badge-info\">{{ field_neighborhood }}</span>\r\n    <h5 class=\"card-title\">{{ title }}</h5>\r\n    <p class=\"card-text\">{{ field_description }}</p>\r\n    <a href=\"/node/{{ nid }}\" class=\"btn btn-primary\">More details</a>\r\n  </div>\r\n  <div class=\"card-footer text-muted\">\r\n    {{ field_requested_timestamp }}\r\n  </div>\r\n</div>"
+            text: "<div class=\"card\" style=\"width: 18rem;\">\r\n  {{ field_media_url }}\r\n  <div class=\"card-body\">\r\n    <span class=\"badge badge-secondary\">{{ field_neighborhood }}</span>\r\n    <h5 class=\"card-title\">{{ title }}</h5>\r\n    <p class=\"card-text\">{{ field_description }}</p>\r\n    <a href=\"/node/{{ nid }}\" class=\"btn btn-primary\">More details</a>\r\n  </div>\r\n  <div class=\"card-footer text-muted\">\r\n    {{ field_requested_timestamp }}\r\n  </div>\r\n</div>"
             make_link: false
             path: ''
             absolute: false
