Add metatag and basic config

--- a/configsync/core.extension.yml
+++ b/configsync/core.extension.yml
@@ -18,6 +18,11 @@ module:
   media: 0
   menu_link_content: 0
   menu_ui: 0
+  metatag: 0
+  metatag_facebook: 0
+  metatag_pinterest: 0
+  metatag_twitter_cards: 0
+  metatag_views: 0
   node: 0
   options: 0
   page_cache: 0
@@ -27,6 +32,7 @@ module:
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   update: 0
   user: 0
