--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "ext-json": "*",
         "cweagans/composer-patches": "^1.6.7",
         "php": "^7.4",
-        "drupal/bootstrap4": "^2.0"
+        "drupal/bootstrap4": "^2.0",
+        "drupal/metatag": "^1.13"
     },
     "license": "GPL-2.0-or-later",
     "authors": [
