--- a/configsync/views.view.reports_cards.yml
+++ b/configsync/views.view.reports_cards.yml
@@ -492,7 +492,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: '<img src="https://pbs.twimg.com/profile_images/631076340280635396/nH93RnFb_400x400.png" class="card-img-top" alt="...">'
+          empty: '<img src="/logo.png" class="card-img-top" alt="...">'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
