Title text for date

--- a/configsync/views.view.reports_cards.yml
+++ b/configsync/views.view.reports_cards.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.storage.node.field_description
     - field.storage.node.field_media_url
     - field.storage.node.field_neighborhood
+    - field.storage.node.field_requested_datetime
     - field.storage.node.field_requested_timestamp
     - field.storage.node.field_service_name
     - node.type.report
@@ -209,7 +210,7 @@ display:
           alter:
             alter_text: false
             text: ''
-            make_link: true
+            make_link: false
             path: '{{ view_node }}'
             absolute: false
             external: false
@@ -511,6 +512,69 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_requested_datetime:
+          id: field_requested_datetime
+          table: node__field_requested_datetime
+          field: field_requested_datetime
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: true
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: datetime_plain
+          settings:
+            timezone_override: ''
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         field_requested_timestamp:
           id: field_requested_timestamp
           table: node__field_requested_timestamp
@@ -521,8 +585,8 @@ display:
           label: Opened
           exclude: true
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: '<span title="{{ field_requested_datetime }}">{{ field_requested_timestamp }}</span>'
             make_link: false
             path: ''
             absolute: false
@@ -1142,6 +1206,7 @@ display:
         - 'config:field.storage.node.field_description'
         - 'config:field.storage.node.field_media_url'
         - 'config:field.storage.node.field_neighborhood'
+        - 'config:field.storage.node.field_requested_datetime'
         - 'config:field.storage.node.field_requested_timestamp'
         - 'config:field.storage.node.field_service_name'
   page:
@@ -1162,7 +1227,8 @@ display:
         description: 'Find and manage content'
         menu_name: admin
         weight: -10
-      display_extenders: {  }
+      display_extenders:
+        metatag_display_extender: {  }
       exposed_block: false
       display_description: ''
     display_plugin: page
@@ -1184,6 +1250,7 @@ display:
         - 'config:field.storage.node.field_description'
         - 'config:field.storage.node.field_media_url'
         - 'config:field.storage.node.field_neighborhood'
+        - 'config:field.storage.node.field_requested_datetime'
         - 'config:field.storage.node.field_requested_timestamp'
         - 'config:field.storage.node.field_service_name'
   page_1:
@@ -1294,5 +1361,6 @@ display:
         - 'config:field.storage.node.field_description'
         - 'config:field.storage.node.field_media_url'
         - 'config:field.storage.node.field_neighborhood'
+        - 'config:field.storage.node.field_requested_datetime'
         - 'config:field.storage.node.field_requested_timestamp'
         - 'config:field.storage.node.field_service_name'
